--- a/cg-variable-inspector.html
+++ b/cg-variable-inspector.html
@@ -66,7 +66,7 @@
                 }
             },
             _valueChanged: function () {
-                if (this._type === "sound") {
+                if (this._type === "sound" && this._value !== null) {
                     this._name = this._value.name;
                 }
             },
