--- a/cg-renderer.html
+++ b/cg-renderer.html
@@ -67,11 +67,38 @@
             },
 
             createVariable: function (type, name, value) {
+                if (name === "") {
+                    this.fire("error", {error: new pandora.Exception("A name should provided to create a variable")});
+                    return false;
+                }
+                if (this._graph.getModel(name) !== undefined) {
+                    this.fire("error", {error: new pandora.Exception("Variable {0} already exists", name)});
+                    return false;
+                }
                 this._graph.addModel(new cg.Variable({
                     "name": name,
                     "value-type": type,
                     "value": value
                 }));
+                return true;
+            },
+
+            editVariable: function (previous, type, name, value) {
+                if (name === "") {
+                    this.fire("error", {error: new pandora.Exception("A name should provided to create a variable")});
+                    return false;
+                }
+                if (this._graph.getModel(name) !== undefined) {
+                    this.fire("error", {error: new pandora.Exception("Variable {0} already exists", name)});
+                    return false;
+                }
+                this._graph.deleteModel(name);
+                this._graph.addModel(new cg.Variable({
+                    "name": name,
+                    "value-type": type,
+                    "value": value
+                }));
+                return true;
             },
 
             deleteVariable: function (name) {
