--- a/cg-renderer.html
+++ b/cg-renderer.html
@@ -88,7 +88,7 @@
                     this.fire("error", {error: new pandora.Exception("A name should provided to create a variable")});
                     return false;
                 }
-                if (this._graph.getModel(name) !== undefined) {
+                if (name !== previous && this._graph.getModel(name) !== undefined) {
                     this.fire("error", {error: new pandora.Exception("Variable {0} already exists", name)});
                     return false;
                 }
