Fixed error in createVariable. Fixed import in cg-variable-inspector.

--- a/cg-renderer.html
+++ b/cg-renderer.html
@@ -67,7 +67,7 @@
             },
 
             createVariable: function (type, name, value) {
-                if (name === "") {
+                if (!name) {
                     this.fire("error", {error: new pandora.Exception("A name should provided to create a variable")});
                     return false;
                 }
