Fixed crash with sound in variable inspector. Fixed reset picker when a variable is deleted.

--- a/cg-app.html
+++ b/cg-app.html
@@ -379,6 +379,7 @@
             resetPicker: function () {
                 this.$.sidebar.state = "picker";
                 this._pickerPattern = "";
+                this.$.pickerElement.reset();
             },
             toJSON: function () {
                 return this.$.renderer.toJSON();
