--- a/cg-variable-inspector.html
+++ b/cg-variable-inspector.html
@@ -67,7 +67,7 @@
                 }
             },
             _valueChanged: function () {
-                if (this._type === "sound" && this._value !== null) {
+                if (this._type === "sound" && this._value) {
                     this._name = this._value.name;
                 }
             },
