--- a/index.html
+++ b/index.html
@@ -59,23 +59,25 @@
                 this.$.codegraph.createVariable("sound", "toto.mp3", "oijo2ij34o2i3j423uh4i23ueone2u3h2i3h24");
             }.bind(this));
             this.$.codegraph.addEventListener("variable.create", function (e) {
-                this.createVariable(
+                if (this.createVariable(
                         e.detail.variable.data.valueType,
                         e.detail.variable.name,
                         e.detail.variable.data.value
-                );
-                this.showSuccess("Variable \"" + e.detail.variable.name + "\" successfully created!");
-                this.resetPicker();
+                )) {
+                    this.showSuccess("Variable \"" + e.detail.variable.name + "\" successfully created!");
+                    this.resetPicker();
+                }
             });
             this.$.codegraph.addEventListener("variable.edit", function (e) {
-                this.deleteVariable(e.detail.variable.previousName);
-                this.createVariable(
+                if (this.editVariable(
+                        e.detail.variable.previousName,
                         e.detail.variable.data.valueType,
                         e.detail.variable.name,
                         e.detail.variable.data.value
-                );
-                this.showSuccess("Variable \"" + e.detail.variable.name + "\" successfully updated!");
-                this.resetPicker();
+                )) {
+                    this.showSuccess("Variable \"" + e.detail.variable.name + "\" successfully updated!");
+                    this.resetPicker();
+                }
             });
         };
     </script>
